appId: app.lampada
tags:
  - critical
---
- launchApp:
    stopApp: true
    clearState: false
- assertVisible:
    id: "start-prayer-button"
- tapOn:
    id: "journal-button"
- assertVisible:
    id: "journal-title"
- assertVisible: ".*Финальный smoke.*"
- tapOn: ".*Финальный smoke.*"
- assertVisible: ".*Финальный ответ.*"
- assertVisible: ".*Финальный вывод.*"
